Hotfix - fixed button border not aligned on login ui

--- a/src/main/resources/edu/qut/cab302/wehab/MainStyleSheet.css
+++ b/src/main/resources/edu/qut/cab302/wehab/MainStyleSheet.css
@@ -72,7 +72,7 @@
 
 .main-nav-pane Button: hover {
     -fx-background-insets: 0;
-    -fx-border-width: 5px;
+    -fx-border-width: 4px;
 }
 
 .main-container {
